// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard matches snapshot with no accounts 1`] = `
"<Provider store={{...}}>
  <Connect(WithStyles(DashboardComponent))>
    <WithStyles(DashboardComponent) settings={{...}} accounts={{...}} formatCurrency={[Function]} totalBalance={0} dispatch={[Function]}>
      <DashboardComponent settings={{...}} accounts={{...}} formatCurrency={[Function]} totalBalance={0} dispatch={[Function]} classes={{...}}>
        <WithStyles(Grid) container={true}>
          <Grid container={true} classes={{...}} alignContent=\\"stretch\\" alignItems=\\"stretch\\" component=\\"div\\" direction=\\"row\\" item={false} justify=\\"flex-start\\" lg={false} md={false} sm={false} spacing={0} wrap=\\"wrap\\" xl={false} xs={false} zeroMinWidth={false}>
            <div className=\\"MuiGrid-container-10\\">
              <WithStyles(Grid) container={true} justify=\\"flex-end\\" className={[undefined]}>
                <Grid container={true} justify=\\"flex-end\\" className={[undefined]} classes={{...}} alignContent=\\"stretch\\" alignItems=\\"stretch\\" component=\\"div\\" direction=\\"row\\" item={false} lg={false} md={false} sm={false} spacing={0} wrap=\\"wrap\\" xl={false} xs={false} zeroMinWidth={false}>
                  <div className=\\"MuiGrid-container-10 MuiGrid-justify-xs-flex-end-28\\">
                    <WithStyles(Paper) className=\\"DashboardComponent-balancePaper-1\\">
                      <Paper className=\\"DashboardComponent-balancePaper-1\\" classes={{...}} component=\\"div\\" elevation={2} square={false}>
                        <div className=\\"MuiPaper-root-107 MuiPaper-elevation2-111 MuiPaper-rounded-108 DashboardComponent-balancePaper-1\\">
                          <WithStyles(Typography) variant=\\"body1\\" color=\\"textSecondary\\" align=\\"right\\">
                            <Typography variant=\\"body1\\" color=\\"textSecondary\\" align=\\"right\\" theme={{...}} classes={{...}} gutterBottom={false} headlineMapping={{...}} inline={false} noWrap={false} paragraph={false}>
                              <p className=\\"MuiTypography-root-134 MuiTypography-body1-143 MuiTypography-colorTextSecondary-167 MuiTypography-alignRight-158\\">
                                Balance
                              </p>
                            </Typography>
                          </WithStyles(Typography)>
                          <WithStyles(Typography) variant=\\"h5\\" align=\\"right\\" className=\\"DashboardComponent-balanceAmount-2\\">
                            <Typography variant=\\"h5\\" align=\\"right\\" className=\\"DashboardComponent-balanceAmount-2\\" theme={{...}} classes={{...}} color=\\"default\\" gutterBottom={false} headlineMapping={{...}} inline={false} noWrap={false} paragraph={false}>
                              <h5 className=\\"MuiTypography-root-134 MuiTypography-h5-150 MuiTypography-alignRight-158 DashboardComponent-balanceAmount-2\\">
                                $0.00
                              </h5>
                            </Typography>
                          </WithStyles(Typography)>
                          <WithStyles(Paper) className=\\"DashboardComponent-balancePaperIcon-3\\">
                            <Paper className=\\"DashboardComponent-balancePaperIcon-3\\" classes={{...}} component=\\"div\\" elevation={2} square={false}>
                              <div className=\\"MuiPaper-root-107 MuiPaper-elevation2-111 MuiPaper-rounded-108 DashboardComponent-balancePaperIcon-3\\">
                                <pure(DashboardIcon) className=\\"DashboardComponent-balanceIcon-4\\">
                                  <DashboardIcon className=\\"DashboardComponent-balanceIcon-4\\">
                                    <WithStyles(SvgIcon) className=\\"DashboardComponent-balanceIcon-4\\">
                                      <SvgIcon className=\\"DashboardComponent-balanceIcon-4\\" classes={{...}} color=\\"inherit\\" component=\\"svg\\" fontSize=\\"default\\" viewBox=\\"0 0 24 24\\">
                                        <svg className=\\"MuiSvgIcon-root-170 DashboardComponent-balanceIcon-4\\" focusable=\\"false\\" viewBox=\\"0 0 24 24\\" color={[undefined]} aria-hidden=\\"true\\" role=\\"presentation\\">
                                          <path fill=\\"none\\" d=\\"M0 0h24v24H0z\\" />
                                          <path d=\\"M3 13h8V3H3v10zm0 8h8v-6H3v6zm10 0h8V11h-8v10zm0-18v6h8V3h-8z\\" />
                                        </svg>
                                      </SvgIcon>
                                    </WithStyles(SvgIcon)>
                                  </DashboardIcon>
                                </pure(DashboardIcon)>
                              </div>
                            </Paper>
                          </WithStyles(Paper)>
                        </div>
                      </Paper>
                    </WithStyles(Paper)>
                  </div>
                </Grid>
              </WithStyles(Grid)>
              <WithStyles(Grid) container={true}>
                <Grid container={true} classes={{...}} alignContent=\\"stretch\\" alignItems=\\"stretch\\" component=\\"div\\" direction=\\"row\\" item={false} justify=\\"flex-start\\" lg={false} md={false} sm={false} spacing={0} wrap=\\"wrap\\" xl={false} xs={false} zeroMinWidth={false}>
                  <div className=\\"MuiGrid-container-10\\">
                    <WithStyles(Paper) className=\\"DashboardComponent-summaryPaper-5\\">
                      <Paper className=\\"DashboardComponent-summaryPaper-5\\" classes={{...}} component=\\"div\\" elevation={2} square={false}>
                        <div className=\\"MuiPaper-root-107 MuiPaper-elevation2-111 MuiPaper-rounded-108 DashboardComponent-summaryPaper-5\\">
                          <WithStyles(Typography) variant=\\"caption\\" className=\\"DashboardComponent-noAccounts-6\\">
                            <Typography variant=\\"caption\\" className=\\"DashboardComponent-noAccounts-6\\" theme={{...}} classes={{...}} align=\\"inherit\\" color=\\"default\\" gutterBottom={false} headlineMapping={{...}} inline={false} noWrap={false} paragraph={false}>
                              <span className=\\"MuiTypography-root-134 MuiTypography-caption-144 DashboardComponent-noAccounts-6\\">
                                You don&#39;t have any accounts yet
                              </span>
                            </Typography>
                          </WithStyles(Typography)>
                        </div>
                      </Paper>
                    </WithStyles(Paper)>
                  </div>
                </Grid>
              </WithStyles(Grid)>
            </div>
          </Grid>
        </WithStyles(Grid)>
      </DashboardComponent>
    </WithStyles(DashboardComponent)>
  </Connect(WithStyles(DashboardComponent))>
</Provider>"
`;

exports[`Dashboard matches snapshot with one account 1`] = `
"<Provider store={{...}}>
  <Connect(WithStyles(DashboardComponent))>
    <WithStyles(DashboardComponent) settings={{...}} accounts={{...}} formatCurrency={[Function]} totalBalance={0} dispatch={[Function]}>
      <DashboardComponent settings={{...}} accounts={{...}} formatCurrency={[Function]} totalBalance={0} dispatch={[Function]} classes={{...}}>
        <WithStyles(Grid) container={true}>
          <Grid container={true} classes={{...}} alignContent=\\"stretch\\" alignItems=\\"stretch\\" component=\\"div\\" direction=\\"row\\" item={false} justify=\\"flex-start\\" lg={false} md={false} sm={false} spacing={0} wrap=\\"wrap\\" xl={false} xs={false} zeroMinWidth={false}>
            <div className=\\"MuiGrid-container-10\\">
              <WithStyles(Grid) container={true} justify=\\"flex-end\\" className={[undefined]}>
                <Grid container={true} justify=\\"flex-end\\" className={[undefined]} classes={{...}} alignContent=\\"stretch\\" alignItems=\\"stretch\\" component=\\"div\\" direction=\\"row\\" item={false} lg={false} md={false} sm={false} spacing={0} wrap=\\"wrap\\" xl={false} xs={false} zeroMinWidth={false}>
                  <div className=\\"MuiGrid-container-10 MuiGrid-justify-xs-flex-end-28\\">
                    <WithStyles(Paper) className=\\"DashboardComponent-balancePaper-1\\">
                      <Paper className=\\"DashboardComponent-balancePaper-1\\" classes={{...}} component=\\"div\\" elevation={2} square={false}>
                        <div className=\\"MuiPaper-root-107 MuiPaper-elevation2-111 MuiPaper-rounded-108 DashboardComponent-balancePaper-1\\">
                          <WithStyles(Typography) variant=\\"body1\\" color=\\"textSecondary\\" align=\\"right\\">
                            <Typography variant=\\"body1\\" color=\\"textSecondary\\" align=\\"right\\" theme={{...}} classes={{...}} gutterBottom={false} headlineMapping={{...}} inline={false} noWrap={false} paragraph={false}>
                              <p className=\\"MuiTypography-root-134 MuiTypography-body1-143 MuiTypography-colorTextSecondary-167 MuiTypography-alignRight-158\\">
                                Balance
                              </p>
                            </Typography>
                          </WithStyles(Typography)>
                          <WithStyles(Typography) variant=\\"h5\\" align=\\"right\\" className=\\"DashboardComponent-balanceAmount-2\\">
                            <Typography variant=\\"h5\\" align=\\"right\\" className=\\"DashboardComponent-balanceAmount-2\\" theme={{...}} classes={{...}} color=\\"default\\" gutterBottom={false} headlineMapping={{...}} inline={false} noWrap={false} paragraph={false}>
                              <h5 className=\\"MuiTypography-root-134 MuiTypography-h5-150 MuiTypography-alignRight-158 DashboardComponent-balanceAmount-2\\">
                                $0.00
                              </h5>
                            </Typography>
                          </WithStyles(Typography)>
                          <WithStyles(Paper) className=\\"DashboardComponent-balancePaperIcon-3\\">
                            <Paper className=\\"DashboardComponent-balancePaperIcon-3\\" classes={{...}} component=\\"div\\" elevation={2} square={false}>
                              <div className=\\"MuiPaper-root-107 MuiPaper-elevation2-111 MuiPaper-rounded-108 DashboardComponent-balancePaperIcon-3\\">
                                <pure(DashboardIcon) className=\\"DashboardComponent-balanceIcon-4\\">
                                  <DashboardIcon className=\\"DashboardComponent-balanceIcon-4\\">
                                    <WithStyles(SvgIcon) className=\\"DashboardComponent-balanceIcon-4\\">
                                      <SvgIcon className=\\"DashboardComponent-balanceIcon-4\\" classes={{...}} color=\\"inherit\\" component=\\"svg\\" fontSize=\\"default\\" viewBox=\\"0 0 24 24\\">
                                        <svg className=\\"MuiSvgIcon-root-170 DashboardComponent-balanceIcon-4\\" focusable=\\"false\\" viewBox=\\"0 0 24 24\\" color={[undefined]} aria-hidden=\\"true\\" role=\\"presentation\\">
                                          <path fill=\\"none\\" d=\\"M0 0h24v24H0z\\" />
                                          <path d=\\"M3 13h8V3H3v10zm0 8h8v-6H3v6zm10 0h8V11h-8v10zm0-18v6h8V3h-8z\\" />
                                        </svg>
                                      </SvgIcon>
                                    </WithStyles(SvgIcon)>
                                  </DashboardIcon>
                                </pure(DashboardIcon)>
                              </div>
                            </Paper>
                          </WithStyles(Paper)>
                        </div>
                      </Paper>
                    </WithStyles(Paper)>
                  </div>
                </Grid>
              </WithStyles(Grid)>
              <WithStyles(Grid) container={true}>
                <Grid container={true} classes={{...}} alignContent=\\"stretch\\" alignItems=\\"stretch\\" component=\\"div\\" direction=\\"row\\" item={false} justify=\\"flex-start\\" lg={false} md={false} sm={false} spacing={0} wrap=\\"wrap\\" xl={false} xs={false} zeroMinWidth={false}>
                  <div className=\\"MuiGrid-container-10\\">
                    <WithStyles(Paper) className=\\"DashboardComponent-summaryPaper-5\\">
                      <Paper className=\\"DashboardComponent-summaryPaper-5\\" classes={{...}} component=\\"div\\" elevation={2} square={false}>
                        <div className=\\"MuiPaper-root-107 MuiPaper-elevation2-111 MuiPaper-rounded-108 DashboardComponent-summaryPaper-5\\">
                          <WithStyles(Table) className={[undefined]}>
                            <Table className={[undefined]} classes={{...}} component=\\"table\\" padding=\\"default\\">
                              <table className=\\"MuiTable-root-179\\">
                                <WithStyles(TableHead)>
                                  <TableHead classes={{...}} component=\\"thead\\">
                                    <thead className=\\"MuiTableHead-root-180\\">
                                      <WithStyles(TableRow)>
                                        <TableRow classes={{...}} component=\\"tr\\" hover={false} selected={false}>
                                          <tr className=\\"MuiTableRow-root-181 MuiTableRow-head-184\\">
                                            <WithStyles(TableCell)>
                                              <TableCell classes={{...}} align=\\"inherit\\">
                                                <th className=\\"MuiTableCell-root-186 MuiTableCell-head-187\\" aria-sort={{...}} scope=\\"col\\" />
                                              </TableCell>
                                            </WithStyles(TableCell)>
                                            <WithStyles(TableCell) align=\\"right\\">
                                              <TableCell align=\\"right\\" classes={{...}}>
                                                <th className=\\"MuiTableCell-root-186 MuiTableCell-head-187 MuiTableCell-alignRight-196\\" aria-sort={{...}} scope=\\"col\\">
                                                  USD
                                                </th>
                                              </TableCell>
                                            </WithStyles(TableCell)>
                                          </tr>
                                        </TableRow>
                                      </WithStyles(TableRow)>
                                    </thead>
                                  </TableHead>
                                </WithStyles(TableHead)>
                                <WithStyles(TableBody)>
                                  <TableBody classes={{...}} component=\\"tbody\\">
                                    <tbody className=\\"MuiTableBody-root-198\\">
                                      <WithStyles(TableRow)>
                                        <TableRow classes={{...}} component=\\"tr\\" hover={false} selected={false}>
                                          <tr className=\\"MuiTableRow-root-181\\">
                                            <WithStyles(TableCell)>
                                              <TableCell classes={{...}} align=\\"inherit\\">
                                                <td className=\\"MuiTableCell-root-186 MuiTableCell-body-188\\" aria-sort={{...}} scope={[undefined]}>
                                                  <span className=\\"DashboardComponent-institutionWrapper-7\\">
                                                    <WithStyles(InstitutionIcon) institution=\\"TD\\" size=\\"small\\" className=\\"DashboardComponent-institutionIcon-8\\">
                                                      <InstitutionIcon institution=\\"TD\\" size=\\"small\\" className=\\"DashboardComponent-institutionIcon-8\\" classes={{...}}>
                                                        <pure(AccountBalanceIcon) className=\\"InstitutionIcon-small-199 DashboardComponent-institutionIcon-8\\">
                                                          <AccountBalanceIcon className=\\"InstitutionIcon-small-199 DashboardComponent-institutionIcon-8\\">
                                                            <WithStyles(SvgIcon) className=\\"InstitutionIcon-small-199 DashboardComponent-institutionIcon-8\\">
                                                              <SvgIcon className=\\"InstitutionIcon-small-199 DashboardComponent-institutionIcon-8\\" classes={{...}} color=\\"inherit\\" component=\\"svg\\" fontSize=\\"default\\" viewBox=\\"0 0 24 24\\">
                                                                <svg className=\\"MuiSvgIcon-root-170 InstitutionIcon-small-199 DashboardComponent-institutionIcon-8\\" focusable=\\"false\\" viewBox=\\"0 0 24 24\\" color={[undefined]} aria-hidden=\\"true\\" role=\\"presentation\\">
                                                                  <path fill=\\"none\\" d=\\"M0 0h24v24H0z\\" />
                                                                  <path d=\\"M4 10v7h3v-7H4zm6 0v7h3v-7h-3zM2 22h19v-3H2v3zm14-12v7h3v-7h-3zm-4.5-9L2 6v2h19V6l-9.5-5z\\" />
                                                                </svg>
                                                              </SvgIcon>
                                                            </WithStyles(SvgIcon)>
                                                          </AccountBalanceIcon>
                                                        </pure(AccountBalanceIcon)>
                                                      </InstitutionIcon>
                                                    </WithStyles(InstitutionIcon)>
                                                    <WithStyles(Typography) variant=\\"subtitle2\\">
                                                      <Typography variant=\\"subtitle2\\" theme={{...}} classes={{...}} align=\\"inherit\\" color=\\"default\\" gutterBottom={false} headlineMapping={{...}} inline={false} noWrap={false} paragraph={false}>
                                                        <h6 className=\\"MuiTypography-root-134 MuiTypography-subtitle2-153\\">
                                                          TD
                                                        </h6>
                                                      </Typography>
                                                    </WithStyles(Typography)>
                                                  </span>
                                                </td>
                                              </TableCell>
                                            </WithStyles(TableCell)>
                                            <WithStyles(TableCell) align=\\"right\\">
                                              <TableCell align=\\"right\\" classes={{...}}>
                                                <td className=\\"MuiTableCell-root-186 MuiTableCell-body-188 MuiTableCell-alignRight-196\\" aria-sort={{...}} scope={[undefined]}>
                                                  <WithStyles(Typography) variant=\\"subtitle2\\">
                                                    <Typography variant=\\"subtitle2\\" theme={{...}} classes={{...}} align=\\"inherit\\" color=\\"default\\" gutterBottom={false} headlineMapping={{...}} inline={false} noWrap={false} paragraph={false}>
                                                      <h6 className=\\"MuiTypography-root-134 MuiTypography-subtitle2-153\\">
                                                        $0.00
                                                      </h6>
                                                    </Typography>
                                                  </WithStyles(Typography)>
                                                </td>
                                              </TableCell>
                                            </WithStyles(TableCell)>
                                          </tr>
                                        </TableRow>
                                      </WithStyles(TableRow)>
                                      <WithStyles(TableRow)>
                                        <TableRow classes={{...}} component=\\"tr\\" hover={false} selected={false}>
                                          <tr className=\\"MuiTableRow-root-181\\">
                                            <WithStyles(TableCell)>
                                              <TableCell classes={{...}} align=\\"inherit\\">
                                                <td className=\\"MuiTableCell-root-186 MuiTableCell-body-188\\" aria-sort={{...}} scope={[undefined]}>
                                                  <WithStyles(Typography) className=\\"DashboardComponent-accountName-9\\">
                                                    <Typography className=\\"DashboardComponent-accountName-9\\" theme={{...}} classes={{...}} align=\\"inherit\\" color=\\"default\\" gutterBottom={false} headlineMapping={{...}} inline={false} noWrap={false} paragraph={false}>
                                                      <p className=\\"MuiTypography-root-134 MuiTypography-body1-143 DashboardComponent-accountName-9\\" />
                                                    </Typography>
                                                  </WithStyles(Typography)>
                                                </td>
                                              </TableCell>
                                            </WithStyles(TableCell)>
                                            <WithStyles(TableCell) align=\\"right\\">
                                              <TableCell align=\\"right\\" classes={{...}}>
                                                <td className=\\"MuiTableCell-root-186 MuiTableCell-body-188 MuiTableCell-alignRight-196\\" aria-sort={{...}} scope={[undefined]}>
                                                  $0.00
                                                </td>
                                              </TableCell>
                                            </WithStyles(TableCell)>
                                          </tr>
                                        </TableRow>
                                      </WithStyles(TableRow)>
                                    </tbody>
                                  </TableBody>
                                </WithStyles(TableBody)>
                              </table>
                            </Table>
                          </WithStyles(Table)>
                        </div>
                      </Paper>
                    </WithStyles(Paper)>
                  </div>
                </Grid>
              </WithStyles(Grid)>
            </div>
          </Grid>
        </WithStyles(Grid)>
      </DashboardComponent>
    </WithStyles(DashboardComponent)>
  </Connect(WithStyles(DashboardComponent))>
</Provider>"
`;

exports[`Dashboard matches snapshot with two accounts in a different currency 1`] = `
"<Provider store={{...}}>
  <Connect(WithStyles(DashboardComponent))>
    <WithStyles(DashboardComponent) settings={{...}} accounts={{...}} formatCurrency={[Function]} totalBalance={0} dispatch={[Function]}>
      <DashboardComponent settings={{...}} accounts={{...}} formatCurrency={[Function]} totalBalance={0} dispatch={[Function]} classes={{...}}>
        <WithStyles(Grid) container={true}>
          <Grid container={true} classes={{...}} alignContent=\\"stretch\\" alignItems=\\"stretch\\" component=\\"div\\" direction=\\"row\\" item={false} justify=\\"flex-start\\" lg={false} md={false} sm={false} spacing={0} wrap=\\"wrap\\" xl={false} xs={false} zeroMinWidth={false}>
            <div className=\\"MuiGrid-container-10\\">
              <WithStyles(Grid) container={true} justify=\\"flex-end\\" className={[undefined]}>
                <Grid container={true} justify=\\"flex-end\\" className={[undefined]} classes={{...}} alignContent=\\"stretch\\" alignItems=\\"stretch\\" component=\\"div\\" direction=\\"row\\" item={false} lg={false} md={false} sm={false} spacing={0} wrap=\\"wrap\\" xl={false} xs={false} zeroMinWidth={false}>
                  <div className=\\"MuiGrid-container-10 MuiGrid-justify-xs-flex-end-28\\">
                    <WithStyles(Paper) className=\\"DashboardComponent-balancePaper-1\\">
                      <Paper className=\\"DashboardComponent-balancePaper-1\\" classes={{...}} component=\\"div\\" elevation={2} square={false}>
                        <div className=\\"MuiPaper-root-107 MuiPaper-elevation2-111 MuiPaper-rounded-108 DashboardComponent-balancePaper-1\\">
                          <WithStyles(Typography) variant=\\"body1\\" color=\\"textSecondary\\" align=\\"right\\">
                            <Typography variant=\\"body1\\" color=\\"textSecondary\\" align=\\"right\\" theme={{...}} classes={{...}} gutterBottom={false} headlineMapping={{...}} inline={false} noWrap={false} paragraph={false}>
                              <p className=\\"MuiTypography-root-134 MuiTypography-body1-143 MuiTypography-colorTextSecondary-167 MuiTypography-alignRight-158\\">
                                Balance
                              </p>
                            </Typography>
                          </WithStyles(Typography)>
                          <WithStyles(Typography) variant=\\"h5\\" align=\\"right\\" className=\\"DashboardComponent-balanceAmount-2\\">
                            <Typography variant=\\"h5\\" align=\\"right\\" className=\\"DashboardComponent-balanceAmount-2\\" theme={{...}} classes={{...}} color=\\"default\\" gutterBottom={false} headlineMapping={{...}} inline={false} noWrap={false} paragraph={false}>
                              <h5 className=\\"MuiTypography-root-134 MuiTypography-h5-150 MuiTypography-alignRight-158 DashboardComponent-balanceAmount-2\\">
                                €0.00
                              </h5>
                            </Typography>
                          </WithStyles(Typography)>
                          <WithStyles(Paper) className=\\"DashboardComponent-balancePaperIcon-3\\">
                            <Paper className=\\"DashboardComponent-balancePaperIcon-3\\" classes={{...}} component=\\"div\\" elevation={2} square={false}>
                              <div className=\\"MuiPaper-root-107 MuiPaper-elevation2-111 MuiPaper-rounded-108 DashboardComponent-balancePaperIcon-3\\">
                                <pure(DashboardIcon) className=\\"DashboardComponent-balanceIcon-4\\">
                                  <DashboardIcon className=\\"DashboardComponent-balanceIcon-4\\">
                                    <WithStyles(SvgIcon) className=\\"DashboardComponent-balanceIcon-4\\">
                                      <SvgIcon className=\\"DashboardComponent-balanceIcon-4\\" classes={{...}} color=\\"inherit\\" component=\\"svg\\" fontSize=\\"default\\" viewBox=\\"0 0 24 24\\">
                                        <svg className=\\"MuiSvgIcon-root-170 DashboardComponent-balanceIcon-4\\" focusable=\\"false\\" viewBox=\\"0 0 24 24\\" color={[undefined]} aria-hidden=\\"true\\" role=\\"presentation\\">
                                          <path fill=\\"none\\" d=\\"M0 0h24v24H0z\\" />
                                          <path d=\\"M3 13h8V3H3v10zm0 8h8v-6H3v6zm10 0h8V11h-8v10zm0-18v6h8V3h-8z\\" />
                                        </svg>
                                      </SvgIcon>
                                    </WithStyles(SvgIcon)>
                                  </DashboardIcon>
                                </pure(DashboardIcon)>
                              </div>
                            </Paper>
                          </WithStyles(Paper)>
                        </div>
                      </Paper>
                    </WithStyles(Paper)>
                  </div>
                </Grid>
              </WithStyles(Grid)>
              <WithStyles(Grid) container={true}>
                <Grid container={true} classes={{...}} alignContent=\\"stretch\\" alignItems=\\"stretch\\" component=\\"div\\" direction=\\"row\\" item={false} justify=\\"flex-start\\" lg={false} md={false} sm={false} spacing={0} wrap=\\"wrap\\" xl={false} xs={false} zeroMinWidth={false}>
                  <div className=\\"MuiGrid-container-10\\">
                    <WithStyles(Paper) className=\\"DashboardComponent-summaryPaper-5\\">
                      <Paper className=\\"DashboardComponent-summaryPaper-5\\" classes={{...}} component=\\"div\\" elevation={2} square={false}>
                        <div className=\\"MuiPaper-root-107 MuiPaper-elevation2-111 MuiPaper-rounded-108 DashboardComponent-summaryPaper-5\\">
                          <WithStyles(Table) className={[undefined]}>
                            <Table className={[undefined]} classes={{...}} component=\\"table\\" padding=\\"default\\">
                              <table className=\\"MuiTable-root-179\\">
                                <WithStyles(TableHead)>
                                  <TableHead classes={{...}} component=\\"thead\\">
                                    <thead className=\\"MuiTableHead-root-180\\">
                                      <WithStyles(TableRow)>
                                        <TableRow classes={{...}} component=\\"tr\\" hover={false} selected={false}>
                                          <tr className=\\"MuiTableRow-root-181 MuiTableRow-head-184\\">
                                            <WithStyles(TableCell)>
                                              <TableCell classes={{...}} align=\\"inherit\\">
                                                <th className=\\"MuiTableCell-root-186 MuiTableCell-head-187\\" aria-sort={{...}} scope=\\"col\\" />
                                              </TableCell>
                                            </WithStyles(TableCell)>
                                            <WithStyles(TableCell) align=\\"right\\">
                                              <TableCell align=\\"right\\" classes={{...}}>
                                                <th className=\\"MuiTableCell-root-186 MuiTableCell-head-187 MuiTableCell-alignRight-196\\" aria-sort={{...}} scope=\\"col\\">
                                                  EUR
                                                </th>
                                              </TableCell>
                                            </WithStyles(TableCell)>
                                          </tr>
                                        </TableRow>
                                      </WithStyles(TableRow)>
                                    </thead>
                                  </TableHead>
                                </WithStyles(TableHead)>
                                <WithStyles(TableBody)>
                                  <TableBody classes={{...}} component=\\"tbody\\">
                                    <tbody className=\\"MuiTableBody-root-198\\">
                                      <WithStyles(TableRow)>
                                        <TableRow classes={{...}} component=\\"tr\\" hover={false} selected={false}>
                                          <tr className=\\"MuiTableRow-root-181\\">
                                            <WithStyles(TableCell)>
                                              <TableCell classes={{...}} align=\\"inherit\\">
                                                <td className=\\"MuiTableCell-root-186 MuiTableCell-body-188\\" aria-sort={{...}} scope={[undefined]}>
                                                  <span className=\\"DashboardComponent-institutionWrapper-7\\">
                                                    <WithStyles(InstitutionIcon) institution=\\"TD\\" size=\\"small\\" className=\\"DashboardComponent-institutionIcon-8\\">
                                                      <InstitutionIcon institution=\\"TD\\" size=\\"small\\" className=\\"DashboardComponent-institutionIcon-8\\" classes={{...}}>
                                                        <pure(AccountBalanceIcon) className=\\"InstitutionIcon-small-199 DashboardComponent-institutionIcon-8\\">
                                                          <AccountBalanceIcon className=\\"InstitutionIcon-small-199 DashboardComponent-institutionIcon-8\\">
                                                            <WithStyles(SvgIcon) className=\\"InstitutionIcon-small-199 DashboardComponent-institutionIcon-8\\">
                                                              <SvgIcon className=\\"InstitutionIcon-small-199 DashboardComponent-institutionIcon-8\\" classes={{...}} color=\\"inherit\\" component=\\"svg\\" fontSize=\\"default\\" viewBox=\\"0 0 24 24\\">
                                                                <svg className=\\"MuiSvgIcon-root-170 InstitutionIcon-small-199 DashboardComponent-institutionIcon-8\\" focusable=\\"false\\" viewBox=\\"0 0 24 24\\" color={[undefined]} aria-hidden=\\"true\\" role=\\"presentation\\">
                                                                  <path fill=\\"none\\" d=\\"M0 0h24v24H0z\\" />
                                                                  <path d=\\"M4 10v7h3v-7H4zm6 0v7h3v-7h-3zM2 22h19v-3H2v3zm14-12v7h3v-7h-3zm-4.5-9L2 6v2h19V6l-9.5-5z\\" />
                                                                </svg>
                                                              </SvgIcon>
                                                            </WithStyles(SvgIcon)>
                                                          </AccountBalanceIcon>
                                                        </pure(AccountBalanceIcon)>
                                                      </InstitutionIcon>
                                                    </WithStyles(InstitutionIcon)>
                                                    <WithStyles(Typography) variant=\\"subtitle2\\">
                                                      <Typography variant=\\"subtitle2\\" theme={{...}} classes={{...}} align=\\"inherit\\" color=\\"default\\" gutterBottom={false} headlineMapping={{...}} inline={false} noWrap={false} paragraph={false}>
                                                        <h6 className=\\"MuiTypography-root-134 MuiTypography-subtitle2-153\\">
                                                          TD
                                                        </h6>
                                                      </Typography>
                                                    </WithStyles(Typography)>
                                                  </span>
                                                </td>
                                              </TableCell>
                                            </WithStyles(TableCell)>
                                            <WithStyles(TableCell) align=\\"right\\">
                                              <TableCell align=\\"right\\" classes={{...}}>
                                                <td className=\\"MuiTableCell-root-186 MuiTableCell-body-188 MuiTableCell-alignRight-196\\" aria-sort={{...}} scope={[undefined]}>
                                                  <WithStyles(Typography) variant=\\"subtitle2\\">
                                                    <Typography variant=\\"subtitle2\\" theme={{...}} classes={{...}} align=\\"inherit\\" color=\\"default\\" gutterBottom={false} headlineMapping={{...}} inline={false} noWrap={false} paragraph={false}>
                                                      <h6 className=\\"MuiTypography-root-134 MuiTypography-subtitle2-153\\">
                                                        €0.00
                                                      </h6>
                                                    </Typography>
                                                  </WithStyles(Typography)>
                                                </td>
                                              </TableCell>
                                            </WithStyles(TableCell)>
                                          </tr>
                                        </TableRow>
                                      </WithStyles(TableRow)>
                                      <WithStyles(TableRow)>
                                        <TableRow classes={{...}} component=\\"tr\\" hover={false} selected={false}>
                                          <tr className=\\"MuiTableRow-root-181\\">
                                            <WithStyles(TableCell)>
                                              <TableCell classes={{...}} align=\\"inherit\\">
                                                <td className=\\"MuiTableCell-root-186 MuiTableCell-body-188\\" aria-sort={{...}} scope={[undefined]}>
                                                  <WithStyles(Typography) className=\\"DashboardComponent-accountName-9\\">
                                                    <Typography className=\\"DashboardComponent-accountName-9\\" theme={{...}} classes={{...}} align=\\"inherit\\" color=\\"default\\" gutterBottom={false} headlineMapping={{...}} inline={false} noWrap={false} paragraph={false}>
                                                      <p className=\\"MuiTypography-root-134 MuiTypography-body1-143 DashboardComponent-accountName-9\\" />
                                                    </Typography>
                                                  </WithStyles(Typography)>
                                                </td>
                                              </TableCell>
                                            </WithStyles(TableCell)>
                                            <WithStyles(TableCell) align=\\"right\\">
                                              <TableCell align=\\"right\\" classes={{...}}>
                                                <td className=\\"MuiTableCell-root-186 MuiTableCell-body-188 MuiTableCell-alignRight-196\\" aria-sort={{...}} scope={[undefined]}>
                                                  €0.00
                                                </td>
                                              </TableCell>
                                            </WithStyles(TableCell)>
                                          </tr>
                                        </TableRow>
                                      </WithStyles(TableRow)>
                                      <WithStyles(TableRow)>
                                        <TableRow classes={{...}} component=\\"tr\\" hover={false} selected={false}>
                                          <tr className=\\"MuiTableRow-root-181\\">
                                            <WithStyles(TableCell)>
                                              <TableCell classes={{...}} align=\\"inherit\\">
                                                <td className=\\"MuiTableCell-root-186 MuiTableCell-body-188\\" aria-sort={{...}} scope={[undefined]}>
                                                  <WithStyles(Typography) className=\\"DashboardComponent-accountName-9\\">
                                                    <Typography className=\\"DashboardComponent-accountName-9\\" theme={{...}} classes={{...}} align=\\"inherit\\" color=\\"default\\" gutterBottom={false} headlineMapping={{...}} inline={false} noWrap={false} paragraph={false}>
                                                      <p className=\\"MuiTypography-root-134 MuiTypography-body1-143 DashboardComponent-accountName-9\\" />
                                                    </Typography>
                                                  </WithStyles(Typography)>
                                                </td>
                                              </TableCell>
                                            </WithStyles(TableCell)>
                                            <WithStyles(TableCell) align=\\"right\\">
                                              <TableCell align=\\"right\\" classes={{...}}>
                                                <td className=\\"MuiTableCell-root-186 MuiTableCell-body-188 MuiTableCell-alignRight-196\\" aria-sort={{...}} scope={[undefined]}>
                                                  €0.00
                                                </td>
                                              </TableCell>
                                            </WithStyles(TableCell)>
                                          </tr>
                                        </TableRow>
                                      </WithStyles(TableRow)>
                                    </tbody>
                                  </TableBody>
                                </WithStyles(TableBody)>
                              </table>
                            </Table>
                          </WithStyles(Table)>
                        </div>
                      </Paper>
                    </WithStyles(Paper)>
                  </div>
                </Grid>
              </WithStyles(Grid)>
            </div>
          </Grid>
        </WithStyles(Grid)>
      </DashboardComponent>
    </WithStyles(DashboardComponent)>
  </Connect(WithStyles(DashboardComponent))>
</Provider>"
`;
